fix: 568 Correction du texte pour le statut de connexion
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/issues/568

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -371,6 +371,14 @@
             "graph": "Graphe",
             "table": "Tableau"
           },
+          "connectionStatus": {
+            "F": "FERMEE",
+            "P": "OUVERTE"
+          },
+          "connectionClosingReason": {
+            "A": "ANORMALE",
+            "N": "NORMALE"
+          },
           "inactiveLineWarning": "La ligne n'est pas active",
           "connexionStatus": "Statut de la connexion",
           "closingConnexionReason": "Raison de la fermeture de la connexion",
