feat: 642  Résumé des actes de gestion dans un widget

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -754,7 +754,10 @@
         "activatedSIMCards": "Cartes SIM actives",
         "suspended": "Suspendu",
         "traffic": "Trafiquantes M",
-        "validation": "Validation transfert"
+        "validation": "Validation transfert",
+        "inprogressTwoDays": "Actes en cours > 48 h",
+        "failedTwoDays": "Actes en échec > 48 h"
+
       }
     }
   },
