refactor: widget search by lines

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -2,6 +2,7 @@
   "searchOrderById": "Rechercher une commande par identifiant",
   "searchActById": "Rechercher un acte par identifiant",
   "searchLineById": "Rechercher une ligne par identifiant",
+  "searchLine": "Rechercher une ligne",
   "search": "Rechercher",
   "numberPerPage": "Nb per page",
   "partnerType": "Type de partenaire",
@@ -39,6 +40,7 @@
   "fromThe": "depuis le :",
   "loading": "Chargement",
   "display": "Affichage",
+  "seeMore": "Voir plus",
   "MB": "{value} Mio",
   "MN": "{value} Mn",
   "home": {
