feat: 591 Ajouter une demande de contrôle de consommation

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -454,7 +454,8 @@
         }
       },
       "tab3": {
-        "controlRequestsTitle": "Historique des demandse de contrôle de consommation"
+        "controlRequestsTitle": "Historique des demandes de contrôle de consommation",
+        "newDemand": "Faire une nouvelle demande"
       },
       "tabServices": {
         "optionalServices": "Services optionels",
