Fix: Afficher un message d'erreur quand la table est vide

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -54,8 +54,8 @@
     },
     "widgets": {
       "orders": "Mes commandes",
-      "bills": "Dernière factures",
-      "currentUsage": "En cours de consomation",
+      "bills": "Dernières factures",
+      "currentUsage": "En cours de consommation",
       "orderStatus": "Statut des commandes",
       "acts": "Acte de gestion",
       "activationAct": "Actes: Activation",
