fix: 792 Ajout du message 'ouvrés'
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/issues/792

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -946,7 +946,7 @@
       },
       "message": {
         "confirmation": "La commande a bien été enregistrée.",
-        "delivery": "Les commandes sont habituellement livrées dans les 3 jours."
+        "delivery": "Les commandes sont habituellement livrées dans les 3 jours ouvrés."
       },
       "deliveryStep": {
         "last": "Dernière adresse de livraison utilisée:",
