refactor(line detail: configuration des cellules de la table de consommation DATA
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/issues/597

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -402,8 +402,8 @@
             "P": "OUVERTE"
           },
           "connectionClosingReason": {
-            "A": "ANORMALE",
-            "N": "NORMALE"
+            "A": "Autre",
+            "N": "Normale"
           },
           "inactiveLineWarning": "La ligne n'est pas active",
           "connexionStatus": "Statut de la connexion",
