--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -487,7 +487,7 @@
 
         "localisation": {
           "requestDate": "Date de la demande",
-          "requestStatus": "Statut de la demande",
+          "requestStatus": "Ajouter une demande",
           "reload": "Rafraîchir",
           "createRequest": "Faire une nouvelle demande",
           "warningMsg": "Voulez vous enregistrer une nouvelle demande ?",
