feat: export des données de la consommation DATA

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -445,6 +445,7 @@
         },
         "supervisionContent": {
           "dataConsumptionPerDay": "Consommation data",
+          "export": "Exporter la consommation data journalière",
           "sms": "Consommation SMS",
           "voice": "Consommation voix",
           "smsTable": {},
