feat: Mise en place de la nouvelle gestion de la table de travail pour les actes de gestion

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -51,6 +51,7 @@
   "output": "Sortant",
   "notAvailable": "Non disponible",
   "notDefined": "Non déterminé",
+  "confirmAction": "Confirmer la demande ?",
   "home": {
     "customize": {
       "title": "Ajouter/Supprimer des widgets"
