Changement comportement recherche unitaire

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -13,6 +13,7 @@
   "showOrHideColumns": "Ajouter / Masquer des colonnes",
   "save": "Enregistrer",
   "cancel": "Annuler",
+  "resetFilters": "Réinitialiser le filtre",
   "confirm": "Confirmer",
   "delete": "Supprimer",
   "modify": "Modifier",
