--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -98,7 +98,9 @@
         "scheduleTermination": "pas d’autre résiliation programmée",
         "termination": "pas d’autre résiliation",
         "activation": "pas d’autre activation"
-      }
+      },
+      "viewOneResult": "Consulter le résultat",
+      "viewXResults": "Consulter les {num} résultats"
     }
   },
   "menu": {
