--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -4,6 +4,7 @@
   "searchLineById": "Rechercher une ligne par identifiant",
   "searchLine": "Rechercher une ligne",
   "search": "Rechercher",
+  "accessTo": "Accéder à",
   "numberPerPage": "Nb per page",
   "partnerType": "Type de partenaire",
   "partnerAlarm": "Type d'alarme",
